# bible-analysis

./: pyproject.toml  save_verses.py  tfidf_textrank.py
topics/: baptism.md
verses/: God.txt  Jesus.txt  baptize.txt  believe.txt  bless.txt  faith.txt  forgive.txt  heaven.txt  hell.txt  holy.txt  hope.txt  love.txt  prayer.txt  repent.txt  salvation.txt  sin.txt  spirit.txt  worship.txt
